src/test/ui/consts/const-eval/conditional_array_execution.stderr
warning: any use of this value will cause an error
  --> $DIR/conditional_array_execution.rs:7:19
   |
LL | const FOO: u32 = [X - Y, Y - X][(X < Y) as usize];
   | ------------------^^^^^---------------------------
   |                   |
   |                   attempt to compute `5_u32 - 6_u32`, which would overflow
   |
note: the lint level is defined here
  --> $DIR/conditional_array_execution.rs:3:9
   |
LL | #![warn(const_err)]
   |         ^^^^^^^^^
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error[E0080]: evaluation of constant value failed
  --> $DIR/conditional_array_execution.rs:12:20
   |
LL |     println!("{}", FOO);
   |                    ^^^ referenced constant has errors

warning: erroneous constant used
  --> $DIR/conditional_array_execution.rs:12:20
   |
LL |     println!("{}", FOO);
   |                    ^^^ referenced constant has errors
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
   = note: this warning originates in the macro `$crate::format_args_nl` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error; 2 warnings emitted

For more information about this error, try `rustc --explain E0080`.
